prometheus-service/prometheus-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: eztio
spec:
  selector:
    name: prometheus
  ports:
    - name: prometheus-svc-port
      protocol: TCP
      port: 9090
      targetPort: 9090
  type: NodePort
