prometheus-service/prometheus-vs.yml
# Тут ничего особенного, все чудеса в gateway
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: eztio
spec:
  hosts:
    - "test.info"
  gateways:
    - prometheus-gateway
  http:
    - match:
        - gateways:
            - prometheus-gateway
      route:
        - destination:
            port:
              number: 9090
            host: prometheus-service
